# task-app-with-rust

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yml
api/: Cargo.toml  README.md
api/lib/: Cargo.toml
api/src/: main.rs
api/src/application/usecases/: mod.rs  task_usecase.rs
api/src/domain/entities/: task.rs
api/src/domain/repositories/: task_repository.rs
api/src/domain/services/: task_service.rs
api/src/infrastructure/database/: connection.rs
api/src/infrastructure/repositories/: task_repository_impl.rs
api/src/presentation/: routes.rs
api/src/presentation/handlers/: task_handler.rs
frontend/: Cargo.toml
openspec/: project.md
openspec/changes/add-user-auth/: proposal.md  tasks.md
openspec/changes/add-user-auth/specs/jwt-authentication/: spec.md
openspec/changes/add-user-auth/specs/user-login/: spec.md
openspec/changes/add-user-auth/specs/user-registration/: spec.md
