[package]
name = "api"
edition.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
argon2 = "0.5"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["aws_lc_rs"] }
garde = { version = "0.22.1", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.17"
anyhow = "1.0.100"

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
